[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Objects/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Objects/Road.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Levels/Gameplay.gd" type="Script" id=3]
[ext_resource path="res://assets/Objects/FuelMeter.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Music/electric_lounge.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/Objects/Gameover.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/Objects/GameoverText.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 511.25, 31.25 )

[node name="Gameplay" type="Node2D"]
script = ExtResource( 3 )

[node name="Roads" type="Node2D" parent="."]

[node name="Road" parent="Roads" instance=ExtResource( 2 )]

[node name="Road2" parent="Roads" instance=ExtResource( 2 )]
position = Vector2( 270, 0 )

[node name="Road3" parent="Roads" instance=ExtResource( 2 )]
position = Vector2( 540, 0 )

[node name="Road4" parent="Roads" instance=ExtResource( 2 )]
position = Vector2( 810, 0 )

[node name="Road5" parent="Roads" instance=ExtResource( 2 )]
position = Vector2( -270, 0 )

[node name="Road6" parent="Roads" instance=ExtResource( 2 )]
position = Vector2( 1080, 0 )

[node name="Obstacles" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( -50, 255 )

[node name="BottomBoundary" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomBoundary"]
position = Vector2( 511.75, 540.75 )
shape = SubResource( 1 )

[node name="ObstacleTimer" type="Timer" parent="."]

[node name="ResetTimer" type="Timer" parent="."]

[node name="FuelMeter" parent="." instance=ExtResource( 4 )]
position = Vector2( 73, 34 )
z_index = 999

[node name="GameplayMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Gameover" parent="." instance=ExtResource( 6 )]

[node name="GameoverText" parent="." instance=ExtResource( 7 )]

[node name="ScoreLabel" parent="GameoverText" index="0"]
visible = false

[connection signal="timeout" from="ObstacleTimer" to="." method="_on_ObstacleTimer_timeout"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]

[editable path="GameoverText"]
